Improved fix for main menu overflow in IE 11

--- a/wcfsetup/install/files/style/layout/pageHeader.scss
+++ b/wcfsetup/install/files/style/layout/pageHeader.scss
@@ -79,13 +79,9 @@
 
 /* MAIN MENU */
 .mainMenu {
-	flex: 1 1 auto;
+	flex: 1;
 	margin-right: 20px;
 	position: relative;
-	
-	@include screen-lg {
-		overflow: hidden;
-	}
 	
 	.boxMenu {
 		display: flex;
